@@ -42,7 +42,7 @@ Gem::Specification.new do |s|
   s.files             = Dir['bin/walrus', 'lib/**/*.rb']
   s.executables       = ['walrus']
   s.add_runtime_dependency 'walrat'
-  s.add_runtime_dependency 'wopen3', '>= 0.3'
+  s.add_development_dependency 'wopen3', '>= 0.3'
   s.add_development_dependency 'mkdtemp', '>= 1.0'
   s.add_development_dependency 'rspec', '1.3.0'
   s.add_development_dependency 'yard'
